LiquidRai: full site build v2

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width, initial-scale=1'/><title>LiquidRai — Chiang Rai Project</title><meta name='description' content='Chiang Rai land + farm operations + tokenized participation.'><meta property='og:title' content='LiquidRai — Chiang Rai Project'><meta property='og:description' content='Chiang Rai land + farm operations + tokenized participation.'><meta property='og:type' content='website'><meta property='og:url' content='https://kalinwolf.github.io/'><link rel='icon' href='/assets/img/favicon.svg'><link rel='stylesheet' href='/assets/css/styles.css'></head><body><header class="nav"><div class="container nav__inner"><a class="brand" href="/"><span class="brand__mark">LiquidRai</span><span class="brand__sub">Chiang Rai</span></a><nav class="nav__links"><a href="/project.html">Project</a><a href="/token.html">Token</a><a href="/timeline.html">Timeline</a><a href="/faq.html">FAQ</a><a class="btn btn--small" href="/contact.html">Request Deck</a></nav></div></header><main><section class='hero'><div class='container'><h1>Build a real, productive asset base — with a utility-first participation layer.</h1><p class='lead'>Chiang Rai project combining land, goat/dairy ops, and utility token layer.</p><div class='cta'><a class='btn' href='/contact.html'>Request the Deck</a><a class='btn btn--ghost' href='/contact.html?intent=waitlist'>Join Waitlist</a></div></div></section></main><footer class="footer"><div class="container footer__inner"><div class="footer__grid"><div><div class="brand brand--footer"><span class="brand__mark">LiquidRai</span></div><p class="muted">Chiang Rai real estate + farm operations + tokenized participation (utility-first).</p></div><div><h4>Links</h4><a href="/project.html">Project</a><br/><a href="/token.html">Token</a><br/><a href="/timeline.html">Timeline</a><br/><a href="/faq.html">FAQ</a><br/><a href="/contact.html">Contact</a></div><div><h4>Contact</h4><p class="muted">Email: <a href="mailto:esgscience@outlook.com?subject=Chiang%20Rai%20Deck%20Request">esgscience@outlook.com</a></p></div></div><div class="footer__disclaimer"><strong>Disclaimer:</strong> This website is for informational purposes only and does not constitute an offer to sell or a solicitation of an offer to buy any securities or tokens. Participation, if any, will be subject to applicable laws and formal documentation. Do your own research and consult professional advisors.</div><div class="footer__meta muted">© <span id="y"></span> LiquidRai.</div></div><script>document.getElementById('y').textContent=new Date().getFullYear()</script></footer><script src='/assets/js/main.js'></script></body></html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>LiquidRai | Real Assets for the Next Generation</title>
+<meta name="description" content="LiquidRai combines Chiang Rai land, goat farm operations, and token participation into one accessible real asset ecosystem.">
+<link rel="canonical" href="https://kalinwolf.github.io/">
+<meta property="og:title" content="LiquidRai">
+<meta property="og:description" content="Real land. Real operations. Token participation.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://kalinwolf.github.io/">
+<meta name="twitter:card" content="summary_large_image">
+<link rel="stylesheet" href="assets/css/styles.css">
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"LiquidRai","url":"https://kalinwolf.github.io/"}</script>
+</head><body>
+<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
+<section class="hero container">
+<h1>Own a Piece of Real-World Assets</h1>
+<p style="color:var(--muted);max-width:700px;margin:0 auto 30px">LiquidRai connects token holders to transparent land and farm development in Chiang Rai.</p>
+<a class="btn" href="token.html">Buy Token</a>
+</section>
+<section class="section container">
+<div class="grid grid-3">
+<div class="card"><h3>Real Estate</h3><p>Strategic land development in Chiang Rai.</p></div>
+<div class="card"><h3>Goat Farm</h3><p>Production-driven dairy and livestock model.</p></div>
+<div class="card"><h3>Token</h3><p>Digital access layer for participation and updates.</p></div>
+</div>
+</section>
+<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
+<script src="assets/js/main.js"></script>
+</body></html>
