--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!doctype html><html lang="en"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Project Overview | LiquidRai</title>
-<meta name="description" content="Overview of LiquidRai’s integrated land and farm ecosystem.">
-<link rel="canonical" href="https://kalinwolf.github.io/project.html">
-<meta property="og:title" content="Project Overview">
-<meta property="og:description" content="Overview of LiquidRai’s integrated land and farm ecosystem.">
+<title>Page Not Found | LiquidRai</title>
+<meta name="description" content="The page you are looking for does not exist.">
+<link rel="canonical" href="https://kalinwolf.github.io/404.html">
+<meta property="og:title" content="Page Not Found">
+<meta property="og:description" content="The page you are looking for does not exist.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/project.html">
+<meta property="og:url" content="https://kalinwolf.github.io/404.html">
 <link rel="stylesheet" href="assets/css/styles.css">
 </head><body>
 <nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Project Overview</h1><p style="color:var(--muted)">Overview of LiquidRai’s integrated land and farm ecosystem.</p></section>
+<section class="section container"><h1>Page Not Found</h1><p style="color:var(--muted)">The page you are looking for does not exist.</p></section>
 <footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
 <script src="assets/js/main.js"></script>
 </body></html>
